// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSwitch basic renders checked toggle switch 1`] = `
<span
  aria-pressed={false}
  onKeyUp={[Function]}
  role="button"
  tabIndex="0"
>
  <ToggleSwitch
    checked={true}
    isActive={false}
    name="testToggle"
    toggleActive={[Function]}
  />
</span>
`;

exports[`ToggleSwitch basic renders inactive toggle switch 1`] = `
<span
  aria-pressed={false}
  onKeyUp={[Function]}
  role="button"
  tabIndex="0"
>
  <ToggleSwitch
    isActive={false}
    name="testToggle"
    toggleActive={[Function]}
  />
</span>
`;
